# api-key-management

./: .gitignore  LICENSE
api-gateway/: Cargo.toml
api-gateway/src/: config.rs  main.rs  proxy.rs  router.rs  state.rs
auth-service/: Cargo.toml
auth-service/src/: app.rs  main.rs
auth-service/src/db/: mod.rs
auth-service/src/dto/: api_response.rs  auth_dto.rs  mod.rs  user_dto.rs
auth-service/src/handlers/: auth_handler.rs
auth-service/src/models/: credentials.rs  user.rs
auth-service/src/repositories/: auth_repository.rs
auth-service/src/routes/: auth_routes.rs
auth-service/src/services/: auth_service.rs
auth-service/src/settings/: mod.rs
user-service/: Cargo.toml
user-service/src/: app.rs  main.rs  state.rs
user-service/src/db/: mod.rs
user-service/src/dto/: api_response.rs  mod.rs  user_dto.rs
user-service/src/errors/: app_error.rs
user-service/src/handlers/: user_handler.rs
user-service/src/models/: credentials.rs  mod.rs  user.rs
user-service/src/repositories/: user_repository.rs
user-service/src/routes/: user_routes.rs
user-service/src/services/: user_service.rs
user-service/src/settings/: mod.rs
user-service/src/utils/: jwt.rs  jwt_extractor.rs  mod.rs
