[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bytes = "1.12.1"
dotenv = "0.15.0"
http = "1.4.2"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream", "json"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
