[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
axum = "0.8.9"
bcrypt = "0.19.2"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
config = "0.15.25"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.5.0", features = ["uuid", "chrono"] }
utoipa-swagger-ui = "9.0.2"
uuid = { version = "1.24.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
